<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_epay_logo"
            android:contentDescription="@string/epay_logo_desc"
            android:layout_marginBottom="48dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@drawable/input_selector"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/black"
            android:textColorHint="#999999"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@drawable/input_selector"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            android:textColorHint="#999999"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Password"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:buttonTint="@color/epay_blue"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_login"
            android:textSize="20sp"
            android:backgroundTint="@color/epay_blue"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginBottom="24dp"
            android:elevation="6dp"
            app:cornerRadius="12dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_no_account"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_signup"
                android:textStyle="bold"
                android:textColor="@color/epay_blue"
                android:paddingStart="4dp"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>